fix cursor on mobile

--- a/src/styles/components/player.scss
+++ b/src/styles/components/player.scss
@@ -81,6 +81,7 @@
   @include m-mobile {
     color: $white;
     width: auto;
+    cursor: default;
 
     & + & {
       margin-left: 20px;
